// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`<CIExecutionCardSummary /> tests branch snapshot 1`] = `
<div>
  <div
    class="main"
  >
    <div
      class="Layout--horizontal StyledProps--main"
    >
      <div
        class="label"
      >
        <div
          class="StyledProps--font StyledProps--main separator StyledProps--flex StyledProps--padding-right-small"
        >
          <span
            class="bp3-icon StyledProps--main StyledProps--color StyledProps--color-primary7"
            data-icon="repository"
          >
            <svg
              height="14"
              viewBox="0 0 13 14"
              width="14"
              xmlns="http://www.w3.org/2000/svg"
            >
              <path
                d="M12.438 2.452l-.006-.017a.367.367 0 00-.067-.114l-.004-.007L10.409.125a.374.374 0 00-.28-.125H2.327a.376.376 0 00-.28.125L.095 2.314l-.005.008a.374.374 0 00-.066.113l-.006.017a.37.37 0 00-.018.11v11.064c0 .206.168.374.374.374h11.707a.375.375 0 00.375-.374V2.563a.369.369 0 00-.018-.111zm-7.91 7.86h3.4v.357a.318.318 0 01-.318.318H4.846a.318.318 0 01-.318-.318v-.357zM.75 9.563V6.625h3.03v.357c0 .588.479 1.066 1.067 1.066H7.61c.588 0 1.066-.478 1.066-1.066v-.357h3.03v2.938H.75zm3.03-6.626v.357c0 .588.479 1.067 1.067 1.067H7.61c.589 0 1.067-.479 1.067-1.067v-.357h3.03v2.939H.75V2.937h3.03zm4.15 0v.357a.318.318 0 01-.318.318H4.846a.318.318 0 01-.318-.318v-.357h3.4zm-3.4 3.688h3.4v.357a.318.318 0 01-.319.317H4.846a.317.317 0 01-.318-.317v-.357zM2.493.749h7.468l1.284 1.44H1.21L2.494.748zm9.213 12.502H.75v-2.939h3.03v.357c0 .589.479 1.067 1.067 1.067H7.61c.588 0 1.066-.478 1.066-1.067v-.357h3.03v2.94z"
                fill="currentColor"
              />
            </svg>
          </span>
          <p
            class="StyledProps--font Text--lineclamp StyledProps--main partLabel StyledProps--color StyledProps--color-primary7 StyledProps--font-size-small StyledProps--font-weight-semi-bold"
            style="--text-line-clamp: 1;"
            title="nextgenui"
          >
            nextgenui
          </p>
        </div>
        <div
          class="StyledProps--font StyledProps--main StyledProps--flex StyledProps--padding-left-small"
        >
          <span
            class="bp3-icon StyledProps--main StyledProps--color StyledProps--color-primary7"
            data-icon="git-new-branch"
          >
            <svg
              height="12"
              viewBox="0 0 13 16"
              width="12"
              xmlns="http://www.w3.org/2000/svg"
            >
              <path
                d="M10.406.003a2.399 2.399 0 00-.8 4.658v.94a.8.8 0 01-.8.8H4.001a2.413 2.413 0 00-.8.14V4.66A2.399 2.399 0 002.402 0a2.399 2.399 0 00-.8 4.661v6.678a2.399 2.399 0 00.8 4.661 2.399 2.399 0 00.8-4.661v-2.54a.8.8 0 01.8-.799h4.803a2.4 2.4 0 002.402-2.4v-.939a2.399 2.399 0 00-.8-4.658z"
                fill="currentColor"
              />
            </svg>
          </span>
          <p
            class="StyledProps--font Text--lineclamp StyledProps--main partLabel StyledProps--color StyledProps--color-primary7 StyledProps--font-size-small StyledProps--font-weight-semi-bold"
            style="--text-line-clamp: 1;"
            title="master"
          >
            master
          </p>
        </div>
      </div>
    </div>
    <div
      class="commitsInfo"
    >
      <p
        class="StyledProps--font StyledProps--main lastCommit"
      >
        <span
          class="bp3-icon bp3-icon-git-commit StyledProps--main icon"
          icon="git-commit"
        >
          <svg
            data-icon="git-commit"
            height="14"
            viewBox="0 0 16 16"
            width="14"
          >
            <desc>
              git-commit
            </desc>
            <path
              d="M15 7h-3.14c-.45-1.72-2-3-3.86-3S4.59 5.28 4.14 7H1c-.55 0-1 .45-1 1s.45 1 1 1h3.14c.45 1.72 2 3 3.86 3s3.41-1.28 3.86-3H15c.55 0 1-.45 1-1s-.45-1-1-1zm-7 3c-1.1 0-2-.9-2-2s.9-2 2-2 2 .9 2 2-.9 2-2 2z"
              fill-rule="evenodd"
            />
          </svg>
        </span>
        <div
          style="font-size: 0px;"
        >
          <span
            class="bp3-popover-wrapper"
          >
            <span
              class="bp3-popover-target Text--targetClass"
            >
              <p
                class="StyledProps--font StyledProps--main message"
                tabindex="0"
              >
                fix: [CDNG-11399]: setting page number as 1 for polling (#4731)
              </p>
            </span>
          </span>
        </div>
        <p
          class="StyledProps--font StyledProps--main commitId"
        >
          <a
            class="label"
            href="https://github.com/wings-software/nextgenui/commit/15953724c19abb82c391bb380f4470a23da6412a"
            rel="noreferrer"
            target="_blank"
          >
            1595372
          </a>
          <span
            class="bp3-popover-wrapper"
          >
            <span
              class="bp3-popover-target Text--targetClass"
            >
              <p
                class="StyledProps--font StyledProps--main"
                style="cursor: pointer;"
                tabindex="0"
              >
                <span
                  class="bp3-icon StyledProps--main"
                  data-icon="copy"
                >
                  <svg
                    height="14"
                    viewBox="0 0 14 16"
                    width="14"
                    xmlns="http://www.w3.org/2000/svg"
                  >
                    <g
                      fill="#22272D"
                      stroke="#22272D"
                      stroke-width="0.25"
                    >
                      <path
                        d="M12.89.55H6.388a3.28 3.28 0 00-3.043 2.067C1.672 2.76.34 4.17.34 5.87v9.271c0 .17.138.308.307.308H7.15c1.35 0 2.543-.825 3.042-2.066 1.673-.144 3.006-1.554 3.006-3.255V.86a.307.307 0 00-.308-.31zM7.15 14.835H.955V5.87c0-1.299.955-2.4 2.199-2.624-.002.01-.001.021-.003.032-.031.182-.05.367-.05.552v9.27c0 .17.138.308.308.308h6.105a2.67 2.67 0 01-2.364 1.425zm5.432-4.705a2.68 2.68 0 01-2.607 2.664H3.716V3.831a2.672 2.672 0 012.671-2.665h6.195v8.963z"
                      />
                      <path
                        d="M6.11 6.672a.308.308 0 000 .615h1.732V9.02a.308.308 0 00.616 0V7.287h1.733a.308.308 0 000-.615H8.458V4.939a.308.308 0 00-.616 0v1.733H6.11z"
                      />
                    </g>
                  </svg>
                </span>
              </p>
            </span>
          </span>
        </p>
      </p>
    </div>
  </div>
</div>
`;

exports[`<CIExecutionCardSummary /> tests default snapshot 1`] = `
<div>
  <div
    class="main"
  >
    <div
      class="Layout--horizontal StyledProps--main"
    >
      <div
        class="label"
      >
        <div
          class="StyledProps--font StyledProps--main separator StyledProps--flex StyledProps--padding-right-small"
        >
          <span
            class="bp3-icon StyledProps--main StyledProps--color StyledProps--color-primary7"
            data-icon="repository"
          >
            <svg
              height="14"
              viewBox="0 0 13 14"
              width="14"
              xmlns="http://www.w3.org/2000/svg"
            >
              <path
                d="M12.438 2.452l-.006-.017a.367.367 0 00-.067-.114l-.004-.007L10.409.125a.374.374 0 00-.28-.125H2.327a.376.376 0 00-.28.125L.095 2.314l-.005.008a.374.374 0 00-.066.113l-.006.017a.37.37 0 00-.018.11v11.064c0 .206.168.374.374.374h11.707a.375.375 0 00.375-.374V2.563a.369.369 0 00-.018-.111zm-7.91 7.86h3.4v.357a.318.318 0 01-.318.318H4.846a.318.318 0 01-.318-.318v-.357zM.75 9.563V6.625h3.03v.357c0 .588.479 1.066 1.067 1.066H7.61c.588 0 1.066-.478 1.066-1.066v-.357h3.03v2.938H.75zm3.03-6.626v.357c0 .588.479 1.067 1.067 1.067H7.61c.589 0 1.067-.479 1.067-1.067v-.357h3.03v2.939H.75V2.937h3.03zm4.15 0v.357a.318.318 0 01-.318.318H4.846a.318.318 0 01-.318-.318v-.357h3.4zm-3.4 3.688h3.4v.357a.318.318 0 01-.319.317H4.846a.317.317 0 01-.318-.317v-.357zM2.493.749h7.468l1.284 1.44H1.21L2.494.748zm9.213 12.502H.75v-2.939h3.03v.357c0 .589.479 1.067 1.067 1.067H7.61c.588 0 1.066-.478 1.066-1.067v-.357h3.03v2.94z"
                fill="currentColor"
              />
            </svg>
          </span>
          <p
            class="StyledProps--font Text--lineclamp StyledProps--main partLabel StyledProps--color StyledProps--color-primary7 StyledProps--font-size-small StyledProps--font-weight-semi-bold"
            style="--text-line-clamp: 1;"
            title="nextgenui"
          >
            nextgenui
          </p>
        </div>
        <div
          class="StyledProps--font StyledProps--main StyledProps--flex StyledProps--padding-left-small"
        >
          <span
            class="bp3-icon StyledProps--main StyledProps--color StyledProps--color-primary7"
            data-icon="git-new-branch"
          >
            <svg
              height="12"
              viewBox="0 0 13 16"
              width="12"
              xmlns="http://www.w3.org/2000/svg"
            >
              <path
                d="M10.406.003a2.399 2.399 0 00-.8 4.658v.94a.8.8 0 01-.8.8H4.001a2.413 2.413 0 00-.8.14V4.66A2.399 2.399 0 002.402 0a2.399 2.399 0 00-.8 4.661v6.678a2.399 2.399 0 00.8 4.661 2.399 2.399 0 00.8-4.661v-2.54a.8.8 0 01.8-.799h4.803a2.4 2.4 0 002.402-2.4v-.939a2.399 2.399 0 00-.8-4.658z"
                fill="currentColor"
              />
            </svg>
          </span>
          <p
            class="StyledProps--font Text--lineclamp StyledProps--main partLabel StyledProps--color StyledProps--color-primary7 StyledProps--font-size-small StyledProps--font-weight-semi-bold"
            style="--text-line-clamp: 1;"
            title="master"
          >
            master
          </p>
        </div>
      </div>
    </div>
  </div>
</div>
`;

exports[`<CIExecutionCardSummary /> tests pull request snapshot 1`] = `
<div>
  <div
    class="main"
  >
    <div
      class="Layout--horizontal StyledProps--main"
    >
      <div
        class="label"
      >
        <div
          class="StyledProps--font StyledProps--main separator StyledProps--flex StyledProps--padding-right-small"
        >
          <span
            class="bp3-icon StyledProps--main StyledProps--color StyledProps--color-primary7"
            data-icon="repository"
          >
            <svg
              height="14"
              viewBox="0 0 13 14"
              width="14"
              xmlns="http://www.w3.org/2000/svg"
            >
              <path
                d="M12.438 2.452l-.006-.017a.367.367 0 00-.067-.114l-.004-.007L10.409.125a.374.374 0 00-.28-.125H2.327a.376.376 0 00-.28.125L.095 2.314l-.005.008a.374.374 0 00-.066.113l-.006.017a.37.37 0 00-.018.11v11.064c0 .206.168.374.374.374h11.707a.375.375 0 00.375-.374V2.563a.369.369 0 00-.018-.111zm-7.91 7.86h3.4v.357a.318.318 0 01-.318.318H4.846a.318.318 0 01-.318-.318v-.357zM.75 9.563V6.625h3.03v.357c0 .588.479 1.066 1.067 1.066H7.61c.588 0 1.066-.478 1.066-1.066v-.357h3.03v2.938H.75zm3.03-6.626v.357c0 .588.479 1.067 1.067 1.067H7.61c.589 0 1.067-.479 1.067-1.067v-.357h3.03v2.939H.75V2.937h3.03zm4.15 0v.357a.318.318 0 01-.318.318H4.846a.318.318 0 01-.318-.318v-.357h3.4zm-3.4 3.688h3.4v.357a.318.318 0 01-.319.317H4.846a.317.317 0 01-.318-.317v-.357zM2.493.749h7.468l1.284 1.44H1.21L2.494.748zm9.213 12.502H.75v-2.939h3.03v.357c0 .589.479 1.067 1.067 1.067H7.61c.588 0 1.066-.478 1.066-1.067v-.357h3.03v2.94z"
                fill="currentColor"
              />
            </svg>
          </span>
          <p
            class="StyledProps--font Text--lineclamp StyledProps--main partLabel StyledProps--color StyledProps--color-primary7 StyledProps--font-size-small StyledProps--font-weight-semi-bold"
            style="--text-line-clamp: 1;"
            title="nextgenui"
          >
            nextgenui
          </p>
        </div>
        <div
          class="StyledProps--font StyledProps--main StyledProps--flex StyledProps--padding-left-small"
        >
          <span
            class="bp3-icon StyledProps--main StyledProps--color StyledProps--color-primary7"
            data-icon="git-new-branch"
          >
            <svg
              height="12"
              viewBox="0 0 13 16"
              width="12"
              xmlns="http://www.w3.org/2000/svg"
            >
              <path
                d="M10.406.003a2.399 2.399 0 00-.8 4.658v.94a.8.8 0 01-.8.8H4.001a2.413 2.413 0 00-.8.14V4.66A2.399 2.399 0 002.402 0a2.399 2.399 0 00-.8 4.661v6.678a2.399 2.399 0 00.8 4.661 2.399 2.399 0 00.8-4.661v-2.54a.8.8 0 01.8-.799h4.803a2.4 2.4 0 002.402-2.4v-.939a2.399 2.399 0 00-.8-4.658z"
                fill="currentColor"
              />
            </svg>
          </span>
          <p
            class="StyledProps--font Text--lineclamp StyledProps--main partLabel StyledProps--color StyledProps--color-primary7 StyledProps--font-size-small StyledProps--font-weight-semi-bold"
            style="--text-line-clamp: 1;"
            title="feat/variables-ux"
          >
            feat/variables-ux
          </p>
        </div>
      </div>
      <div
        class="StyledProps--font StyledProps--main StyledProps--flex"
      >
        <span
          class="bp3-icon bp3-icon-arrow-right StyledProps--main StyledProps--padding-left-small StyledProps--padding-right-small"
          icon="arrow-right"
        >
          <svg
            data-icon="arrow-right"
            height="14"
            viewBox="0 0 16 16"
            width="14"
          >
            <desc>
              arrow-right
            </desc>
            <path
              d="M14.7 7.29l-5-5a.965.965 0 00-.71-.3 1.003 1.003 0 00-.71 1.71l3.29 3.29H1.99c-.55 0-1 .45-1 1s.45 1 1 1h9.59l-3.29 3.29a1.003 1.003 0 001.42 1.42l5-5c.18-.18.29-.43.29-.71s-.12-.52-.3-.7z"
              fill-rule="evenodd"
            />
          </svg>
        </span>
        <div
          class="StyledProps--font StyledProps--main label StyledProps--flex StyledProps--padding-left-medium StyledProps--padding-right-small"
        >
          <span
            class="bp3-icon StyledProps--main StyledProps--color StyledProps--color-primary7"
            data-icon="git-new-branch"
          >
            <svg
              height="12"
              viewBox="0 0 13 16"
              width="12"
              xmlns="http://www.w3.org/2000/svg"
            >
              <path
                d="M10.406.003a2.399 2.399 0 00-.8 4.658v.94a.8.8 0 01-.8.8H4.001a2.413 2.413 0 00-.8.14V4.66A2.399 2.399 0 002.402 0a2.399 2.399 0 00-.8 4.661v6.678a2.399 2.399 0 00.8 4.661 2.399 2.399 0 00.8-4.661v-2.54a.8.8 0 01.8-.799h4.803a2.4 2.4 0 002.402-2.4v-.939a2.399 2.399 0 00-.8-4.658z"
                fill="currentColor"
              />
            </svg>
          </span>
          <p
            class="StyledProps--font Text--lineclamp StyledProps--main StyledProps--color StyledProps--color-primary7 StyledProps--font-size-small StyledProps--font-weight-semi-bold"
            style="--text-line-clamp: 1;"
            title="master"
          >
            master
          </p>
        </div>
      </div>
    </div>
    <div
      class="Layout--horizontal Layout--layout-spacing-small StyledProps--main alignSelfStart StyledProps--flex"
    >
      <span
        class="bp3-icon bp3-icon-git-pull StyledProps--main"
        icon="git-pull"
      >
        <svg
          data-icon="git-pull"
          height="14"
          viewBox="0 0 16 16"
          width="14"
        >
          <desc>
            git-pull
          </desc>
          <path
            d="M3 1C1.34 1 0 2.34 0 4c0 1.3.84 2.4 2 2.82v3.37C.84 10.6 0 11.7 0 13c0 1.66 1.34 3 3 3s3-1.34 3-3c0-1.3-.84-2.4-2-2.82V6.82C5.16 6.4 6 5.3 6 4c0-1.66-1.34-3-3-3zm0 13c-.55 0-1-.45-1-1s.45-1 1-1 1 .45 1 1-.45 1-1 1zm0-9c-.55 0-1-.45-1-1s.45-1 1-1 1 .45 1 1-.45 1-1 1zm11 5.18V6c0-1.66-1.34-3-3-3H9.41l1.29-1.29c.19-.18.3-.43.3-.71A1.003 1.003 0 009.29.29l-3 3C6.11 3.47 6 3.72 6 4c0 .28.11.53.29.71l3 3a1.003 1.003 0 001.42-1.42L9.41 5H11c.55 0 1 .45 1 1v4.18A2.996 2.996 0 0013 16c1.66 0 3-1.34 3-3 0-1.3-.84-2.4-2-2.82zM13 14c-.55 0-1-.45-1-1s.45-1 1-1 1 .45 1 1-.45 1-1 1z"
            fill-rule="evenodd"
          />
        </svg>
      </span>
      <div
        style="font-size: 0px;"
      >
        <p
          class="StyledProps--font StyledProps--main StyledProps--font-size-small StyledProps--color StyledProps--color-grey900"
          style="max-width: 500px; white-space: nowrap; text-overflow: ellipsis; overflow: hidden;"
          title="feat:  [PIE-5]: variables ux update"
        >
          feat:  [PIE-5]: variables ux update
        </p>
      </div>
      <a
        class="label"
        href="https://github.com/wings-software/nextgenui"
        rel="noopener noreferrer"
        target="_blank"
      >
        ci.prSymbol
        4728
      </a>
      <div
        class="state"
      >
        closed
      </div>
    </div>
  </div>
</div>
`;
